setup doctypes for happy box event

--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -46,7 +46,7 @@
       },
       "events_empty": {
         "heading": "Không tìm thấy sự kiện",
-        "description": "Hiên chưa có sự kiện nào lúc này"
+        "description": "Hiện chưa có sự kiện nào lúc này"
       },
       "class_not_found": {
         "heading": "Không tìm thấy lớp nào"
