--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -1,9 +1,32 @@
 {
   "common": {
-    "sign_in":"Đăng nhập"
+    "sign_in": "Đăng nhập",
+    "sign_out": "Đăng xuất",
+    "confirm": "Xác nhận",
+    "go_back": "Quay lại",
+    "language": "Ngôn ngữ",
+    "day_d": "Ngày {{day}}"
   },
   "happy_box": {
     "enter_sign_in_code": "Hãy nhập mã số học sinh hoặc mã số nhân viên",
-    "choose_first_letter": "Hãy chọn chữ cái đầu tên của bạn"
+    "choose_first_letter": "Hãy chọn chữ cái đầu tên của bạn",
+    "welcome_wiser": "Chào Mừng WISer",
+    "challenge_section_description_1": "Không khí Tết rộn ràng, tràn ngập sắc xuân đã lan tỏa khắp Wellspring Saigon! Đây là lúc để mỗi WISer dừng lại một chút, nhìn lại chặng đường một năm đã qua, làm mới chính mình, lan tỏa yêu thương và tạo nên những kỷ niệm Tết thật ý nghĩa.",
+    "challenge_section_description_2": "Các WISers đã sẵn sàng “bung xõa” với 6 Thử Thách Ngày Tết chưa? – Nơi lưu giữ từng khoảnh khắc rực rỡ, đậm chất tinh thần Lễ hội Mùa Xuân 2025 - Nhà là Tết Lớn trong Tim!",
+    "challenge_section_description_3": "Hãy chuẩn bị những khung hình đẹp nhất và cùng nhau chào đón một mùa Tết thật đáng nhớ.",
+    "video_section_gift_description_1": "{{number}} WISer",
+    "video_section_gift_description_2": "tham gia hoàn thành",
+    "video_section_gift_description_3": "đủ {{count}} thử thách",
+    "video_section_gift_description_4": "sẽ nhận quà từ Ban chương trình.",
+    "video_section_countdown_description_1": "Chỉ còn",
+    "video_section_countdown_description_2": "ngày nữa thôi,",
+    "video_section_countdown_description_3": "Hẹn gặp lại các WISers tại lễ hội mùa xuân vào ngày",
+    "video_section_countdown_description_4": "sắp tới!",
+    "welcome_modal_description_1": "Hãy tham gia",
+    "welcome_modal_description_2": "Hội xuân ngày",
+    "welcome_modal_description_3": "để hoàn thành thử thách nhé",
+    "thankyou_modal_description_1": "Cảm ơn",
+    "thankyou_modal_description_2": "Bạn đã hoàn thành thử thách ngày Tết.",
+    "thankyou_modal_description_3": "Chúc WISer sẽ có một năm mới thật nhiều niềm vui và hạnh phúc"
   }
 }
