--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -33,18 +33,20 @@
   },
   "happy_box": {
     "enter_sign_in_code": "Please enter the student ID or employee ID",
-    "choose_first_letter": "Please choose the first letter of your name",
-    "welcome_wiser": "Welcome To WISer",
-    "challenge_section_description_1": "The vibrant spirit of Tet, brimming with the colors of spring, has filled every corner of Wellspring Saigon! This is the perfect time for every WISer to pause, reflect on the past year refresh themselves, spread love, and create meaningful Tet memories.",
-    "challenge_section_description_2": "Are you ready for the 6-Day Tet Challenge? – a journey to capture radiant moments, embracing the festive essence of Wellspring Festival 2025 - Happy Home Grows My Spring!",
+    "choose_first_letter": "Please choose the first letter of first name",
+    "welcome_wiser": "Welcome WISer",
+    "challenge_section_description_1": "The vibrant spirit of Tet, brimming with the colors of spring, has filled every corner of Wellspring Saigon! This is the perfect time for every WISers to pause, reflect on the past year refresh themselves, spread the love, and create meaningful Tet memories.",
+    "challenge_section_description_2_1": "Are you ready for",
+    "challenge_section_description_2_2": "the 6-Day Tet Challenge",
+    "challenge_section_description_2_3": "? - A journey to capture radiant moments, embracing the festive essence of Well-Spring Festival 2025 - Happy Home Grows My Spring!",
     "challenge_section_description_3": "Get your best angles ready and join us in welcoming a truly unforgettable Tet season.",
-    "video_section_gift_description_1": "{{number}} WISer",
-    "video_section_gift_description_2": "completing",
-    "video_section_gift_description_3": "{{count}} challenges",
-    "video_section_gift_description_4": "will receive gifts from the Organizers.",
+    "video_section_gift_description_1": "{{number}} WISers",
+    "video_section_gift_description_2": "completing enough",
+    "video_section_gift_description_3": "{{count}} challenge correctly",
+    "video_section_gift_description_4": "will receive gifts from the Organizers",
     "video_section_countdown_description_1": "Only",
     "video_section_countdown_description_2": "days left,",
-    "video_section_countdown_description_3": "See you WISers at the spring festival on the upcoming",
+    "video_section_countdown_description_3": "See you WISers at the upcoming Well-Spring Festival on",
     "video_section_countdown_description_4": "!",
     "welcome_modal_description_1": "Join the",
     "welcome_modal_description_2": "Spring Festival on",
