--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -1,94 +1,76 @@
 {
   "common": {
-    "sign_in": "Sign In",
-    "sign_out": "Sign Out",
-    "confirm": "Confirm",
-    "go_back": "Go Back",
-    "language": "Language",
-    "day_d": "Day {{day}}",
-    "upload_image": "Upload Image",
-    "finish": "Finish",
-    "edit": "Edit",
-    "home_page": "Home page",
-    "login_page": "Login page",
-    "upload_photo": "Upload Photo",
-    "save_image": "Save Image",
-    "cancel": "Cancel",
-    "refresh_page": "Refresh Page",
-    "from_d_to_d": "From {{from}} to {{to}}"
+    "sign_in": "Đăng nhập",
+    "sign_out": "Đăng xuất",
+    "confirm": "Xác nhận",
+    "go_back": "Quay lại",
+    "language": "Ngôn ngữ",
+    "day_d": "Ngày {{day}}",
+    "image_n": "Hình {{number}}",
+    "step_n": "Bước {{number}}",
+    "upload_image": "Tải ảnh lên",
+    "finish": "Hoàn thành",
+    "edit": "Chỉnh sửa",
+    "home_page": "Trang chủ",
+    "login_page": "Đăng nhập",
+    "upload_photo": "Tải ảnh lên",
+    "save_image": "Lưu ảnh",
+    "send_image": "Gửi ảnh",
+    "cancel": "Hủy bỏ",
+    "refresh_page": "Tải lại trang",
+    "from_d_to_d": "Từ {{from}} đến {{to}}",
+    "full_name": "Họ và tên",
+    "class": "Lớp",
+    "student_code": "MSHS"
   },
   "notification": {
     "client_error": {
-      "heading": "Oops! Something went wrong",
-      "description": "We apologize for the inconvenience. An error has occurred, and we are working to fix it. Please try again later."
+      "heading": "Rất tiếc! Đã có lỗi xảy ra",
+      "description": "Chúng tôi rất tiếc vì sự bất tiện này. Có một lỗi đã xảy ra, và chúng tôi đang nỗ lực khắc phục. Vui lòng thử lại sau."
     },
     "login_failed": {
-      "heading": "Login Failed"
+      "heading": "Đăng nhập thất bại"
     },
     "invalid_code": {
-      "description": "Invalid student ID or employee ID."
+      "description": "Mã số không hợp lệ."
     },
     "something_went_wrong": {
-      "description": "Something went wrong, please try again later."
+      "description": "Đã có lỗi xảy ra, vui lòng thử lại sau."
     }
   },
   "happy_box": {
-    "enter_sign_in_code": "Please enter the student ID or employee ID",
-    "choose_first_letter": "Please choose the first letter of first name",
-    "welcome_wiser": "Welcome WISer",
-    "challenge_section_description_1": "The vibrant spirit of Tet, brimming with the colors of spring, has filled every corner of Wellspring Saigon! This is the perfect time for every WISers to pause, reflect on the past year refresh themselves, spread the love, and create meaningful Tet memories.",
-    "challenge_section_description_2_1": "Are you ready for",
-    "challenge_section_description_2_2": "the 6-Day Tet Challenge",
-    "challenge_section_description_2_3": "? - A journey to capture radiant moments, embracing the festive essence of Well-Spring Festival 2025 - Happy Home Grows My Spring!",
-    "challenge_section_description_3": "Get your best angles ready and join us in welcoming a truly unforgettable Tet season.",
-    "video_section_gift_description_1": "{{number}} WISers",
-    "video_section_gift_description_2": "completing enough",
-    "video_section_gift_description_3": "{{count}} challenge correctly",
-    "video_section_gift_description_4": "will receive gifts from the Organizers",
-    "video_section_countdown_description_1": "Only",
-    "video_section_countdown_description_2": "days left,",
-    "video_section_countdown_description_3": "See you WISers at the upcoming Well-Spring Festival on",
-    "video_section_countdown_description_4": "!",
-    "welcome_modal_description_1": "Join the",
-    "welcome_modal_description_2": "Spring Festival on",
-    "welcome_modal_description_3": "to complete the challenge",
-    "thankyou_modal_description_1": "Thank you",
-    "thankyou_modal_description_2": "You have completed the Tet challenge.",
-    "thankyou_modal_description_3": "Wishing WISer a new year full of joy and happiness"
+    "enter_sign_in_code": "Hãy nhập mã số học sinh hoặc mã số nhân viên",
+    "choose_first_letter": "Hãy chọn chữ cái đầu tên của bạn",
+    "welcome_wiser": "Chào Mừng WISer",
+    "challenge_section_description_1": "Không khí Tết rộn ràng, tràn ngập sắc xuân đã lan tỏa khắp Wellspring Saigon! Đây là lúc để mỗi WISer dừng lại một chút, nhìn lại chặng đường một năm đã qua, làm mới chính mình, lan tỏa yêu thương và tạo nên những kỷ niệm Tết thật ý nghĩa.",
+    "challenge_section_description_2_1": "Các WISers đã sẵn sàng “bung xõa” với",
+    "challenge_section_description_2_2": "6 Thử Thách Ngày Tết",
+    "challenge_section_description_2_3": "chưa? – Nơi lưu giữ từng khoảnh khắc rực rỡ, đậm chất tinh thần Lễ hội Mùa Xuân 2025 - Nhà là Tết Lớn trong Tim!",
+    "challenge_section_description_3": "Hãy chuẩn bị những khung hình đẹp nhất và cùng nhau chào đón một mùa Tết thật đáng nhớ.",
+    "video_section_gift_description_1": "{{number}} WISer may mắn",
+    "video_section_gift_description_2": "tham gia hoàn thành",
+    "video_section_gift_description_3": "đúng và đủ {{count}} thử thách",
+    "video_section_gift_description_4": "sẽ nhận quà từ Ban tổ chức",
+    "video_section_countdown_description_1": "Chỉ còn",
+    "video_section_countdown_description_2": "ngày nữa thôi,",
+    "video_section_countdown_description_3": "Hẹn gặp lại các WISers tại Lễ hội Mùa Xuân vào ngày",
+    "video_section_countdown_description_4": "sắp tới!",
+    "welcome_modal_description_1": "Hãy tham gia",
+    "welcome_modal_description_2": "Hội xuân ngày",
+    "welcome_modal_description_3": "để hoàn thành thử thách nhé",
+    "thankyou_modal_description_1": "Cảm ơn",
+    "thankyou_modal_description_2": "Bạn đã hoàn thành thử thách ngày Tết.",
+    "thankyou_modal_description_3": "Chúc WISer sẽ có một năm mới thật nhiều niềm vui và hạnh phúc"
   },
   "nutritional_journey": {
-    "title": "Nutritional Journey",
-    "campaign_name": "Small Changes – Growing with Your Child",
-    "heading_1": "I. Target",
-    "heading_2": "II. Contest Rules",
-    "heading_3": "III. Rewards and Certificates",
-    
-    "sub_heading_2_1": "Time",
-    "sub_heading_2_2": "How to join",
-    "sub_heading_2_3": "How to submit photos",
-    "sub_heading_2_4": "Evaluation criteria",
-
-    "enter_sign_in_code": "Please enter the student ID or employee ID",
-    "choose_first_letter": "Please choose the first letter of first name",
-    "welcome_wiser": "Welcome WISer",
-    "challenge_section_description_1": "The vibrant spirit of Tet, brimming with the colors of spring, has filled every corner of Wellspring Saigon! This is the perfect time for every WISers to pause, reflect on the past year refresh themselves, spread the love, and create meaningful Tet memories.",
-    "challenge_section_description_2_1": "Are you ready for",
-    "challenge_section_description_2_2": "the 6-Day Tet Challenge",
-    "challenge_section_description_2_3": "? - A journey to capture radiant moments, embracing the festive essence of Well-Spring Festival 2025 - Happy Home Grows My Spring!",
-    "challenge_section_description_3": "Get your best angles ready and join us in welcoming a truly unforgettable Tet season.",
-    "video_section_gift_description_1": "{{number}} WISers",
-    "video_section_gift_description_2": "completing enough",
-    "video_section_gift_description_3": "{{count}} challenge correctly",
-    "video_section_gift_description_4": "will receive gifts from the Organizers",
-    "video_section_countdown_description_1": "Only",
-    "video_section_countdown_description_2": "days left,",
-    "video_section_countdown_description_3": "See you WISers at the upcoming Well-Spring Festival on",
-    "video_section_countdown_description_4": "!",
-    "welcome_modal_description_1": "Join the",
-    "welcome_modal_description_2": "Spring Festival on",
-    "welcome_modal_description_3": "to complete the challenge",
-    "thankyou_modal_description_1": "Thank you",
-    "thankyou_modal_description_2": "You have completed the Tet challenge.",
-    "thankyou_modal_description_3": "Wishing WISer a new year full of joy and happiness"
+    "title": "Hành Trình Dinh Dưỡng",
+    "campaign_name": "Những Thay Đổi Nhỏ – Cùng Con Khôn Lớn",
+    "heading_1": "I. Mục tiêu",
+    "heading_2": "II. Thể lệ cuộc thi",
+    "heading_3": "III. Phần thưởng và công nhận",
+    "sub_heading_2_1": "Thời gian",
+    "sub_heading_2_2": "Cách tham gia",
+    "sub_heading_2_3": "Cách gửi ảnh",
+    "sub_heading_2_4": "Tiêu chí đánh giá"
   }
 }
