--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -72,6 +72,7 @@
       "user_code_required": "Hãy nhập mã số",
       "user_code_duplicate": "Mã số trùng lặp",
       "user_code_invalid": "Mã số không hợp lệ",
+      "user_code_has_orders": "Mã số được đã đăng ký",
       "full_name": "Họ tên",
       "full_name_desc": "*Lưu ý: Họ tên của PHHS hoặc người lớn đi cùng",
       "full_name_placeholder": "Nhập họ tên",
@@ -95,15 +96,28 @@
       "email_placeholder": "Nhập email",
       "email_required": "Hãy nhập email",
       "email_invalid": "Email không hợp lệ",
-      "content_bib": "Nội dung in số bib",
-      "content_bib_desc": "Dành cho hạng vé Well-being",
+      "content_bib": "Nội dung in BIB",
+      "content_bib_desc": "*Chỉ dành cho hạng vé Well-being",
       "content_bib_placeholder": "Nội dung từ 6-8 ký tự",
-      "empty_companion": "Hiện không có phụ huynh/ người đi kèm"
+      "empty_companion": "Hiện không có phụ huynh/ người đi kèm",
+      "no_item": "STT",
+      "price": "Giá vé",
+      "total_price": "Tổng tiền: {{number}}",
+      "payment_success_heading": "<span className=\"text-hr-ember\">BẠN ĐÃ ĐĂNG KÝ THÀNH CÔNG</span> <br/> SỰ KIỆN <span className=\"text-hr-honey\">HAPPY RUN 2025</span>",
+      "payment_success_qr_guide": "Vui lòng thực hiện thanh toán đơn hàng bằng mã QR dưới đây",
+      "payment_success_desc_1": "Email đăng ký thành công sẽ được hệ thống gửi về địa chỉ email của bạn.",
+      "payment_success_desc_2": "Xin chân thành cảm ơn và hẹn gặp lại các bạn tại sự kiện Happy Run 2025!",
+      "policy_heading": "<span className=\"text-hr-ember\">XÁC NHẬN ĐỌC HIỂU</span> <br/> VÀ <span className=\"text-brand-persian\">MIỄN TRỪ TRÁCH NHIỆM </span> <br/> KHI THAM GIA <span className=\"text-hr-honey\">HAPPY RUN 2025</span>"
     },
     "buttons": {
       "add_person": "Thêm người +",
-      "register_now": "Đăng ký ngay"
-    }
+      "register_now": "Đăng ký ngay",
+      "confirm_payment": "Xác nhận thanh toán",
+      "go_back": "Quay lại",
+      "download_qr": "Tải mã QR",
+      "finish":"Hoàn thành"
+    },
+    "policy_content": ""
   },
   "nutritional_journey": {
     "title": "Hành Trình Dinh Dưỡng",
