Update translate Eng

--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -63,50 +63,79 @@
     "thankyou_modal_description_2": "You have completed the Tet challenge.",
     "thankyou_modal_description_3": "Wishing WISer a new year full of joy and happiness"
   },
- "happy_run": {
-    "form_heading": "SỰ KIỆN <span className=\"text-hr-honey\">HAPPY RUN 2025</span> <br/> <span className=\"text-hr-ember\">ĐĂNG KÝ THAM GIA</span>",
-    "form_description_1": "Chào mừng bạn đến với sự kiện",
-    "form_description_2": "Hãy đăng ký tham dự sự kiện theo thông tin bên dưới.",
+  "happy_run": {
+    "form_heading": "EVENT <span className=\"text-hr-honey\">HAPPY RUN 2025</span> <br/> <span className=\"text-hr-ember\">REGISTRATION</span>",
+    "form_description_1": "Welcome to the event",
+    "form_description_2": "Please register for the event with the information below.",
     "form": {
-      "user_code": "Mã số Học sinh/GV-NV",
-      "user_code_required": "Hãy nhập mã số",
-      "user_code_duplicate": "Mã số trùng lặp",
-      "user_code_invalid": "Mã số không hợp lệ",
-      "full_name": "Họ tên",
-      "full_name_desc": "*Lưu ý: Họ tên của PHHS hoặc người lớn đi cùng",
-      "full_name_placeholder": "Nhập họ tên",
-      "full_name_required": "Hãy nhập họ tên",
-      "class_department": "Lớp/Phòng ban",
-      "ticket_class": "Hạng vé",
-      "ticket_class_placeholder": "Chọn hạng vé",
-      "ticket_class_required": "Hãy chọn hạng vé",
-      "ticket_distance": "Cự ly",
-      "ticket_distance_placeholder": "Chọn cự ly",
-      "ticket_distance_required": "Hãy chọn cự ly",
-      "shirt_size": "Size áo",
-      "shirt_size_placeholder": "Chọn size áo",
-      "shirt_size_required": "Hãy chọn size áo",
-      "mobile_number": "Số điện thoại",
-      "mobile_number_desc": "*Lưu ý: số SĐT của PHHS hoặc người lớn đi cùng",
-      "mobile_number_placeholder": "Nhập số điện thoại",
-      "mobile_number_required": "Hãy nhập số điện thoại",
+      "user_code": "Student/Employee ID",
+      "user_code_required": "Please enter the ID",
+      "user_code_duplicate": "Duplicate ID",
+      "user_code_invalid": "Invalid ID",
+      "user_code_has_orders": "ID has already been registered",
+      "full_name": "Full Name",
+      "full_name_desc": "*Note: Full name of the parent or accompanying adult",
+      "full_name_placeholder": "Enter full name",
+      "full_name_required": "Please enter the full name",
+      "class_department": "Class/Department",
+      "ticket_class": "Ticket Class",
+      "ticket_class_placeholder": "Select ticket class",
+      "ticket_class_required": "Please select a ticket class",
+      "ticket_distance": "Distance",
+      "ticket_distance_placeholder": "Select distance",
+      "ticket_distance_required": "Please select a distance",
+      "shirt_size": "T-Shirt Size",
+      "shirt_size_placeholder": "Select T-Shirt size",
+      "shirt_size_required": "Please select a T-Shirt size",
+      "mobile_number": "Phone Number",
+      "mobile_number_desc": "*Note: Phone number of the parent or accompanying adult",
+      "mobile_number_placeholder": "Enter phone number",
+      "mobile_number_required": "Please enter the phone number",
       "email": "Email",
-      "email_desc": "*Lưu ý: 01 địa chỉ email của PHHS",
-      "email_placeholder": "Nhập email",
-      "email_required": "Hãy nhập email",
-      "email_invalid": "Email không hợp lệ",
-      "content_bib": "Nội dung in BIB",
-      "content_bib_desc": "*Chỉ dành cho hạng vé Well-being",
-      "content_bib_placeholder": "Nội dung từ 6-8 ký tự",
-      "empty_companion": "Hiện không có phụ huynh/ người đi kèm",
-      "no_item": "STT",
-      "price": "Giá vé",
-      "total_price:": "Tổng tiền"
+      "email_desc": "*Note: One email address of the parent",
+      "email_placeholder": "Enter email",
+      "email_required": "Please enter the email",
+      "email_invalid": "Invalid email",
+      "content_bib": "BIB Content",
+      "content_bib_desc": "*Only for Well-being ticket class",
+      "content_bib_placeholder": "Content from 6-8 characters",
+      "content_bib_max": "Exceeds 8 characters",
+      "empty_companion": "No parent/accompanying person currently",
+      "no_item": "No.",
+      "price": "Ticket Price",
+      "total_price": "Total: {{number}}",
+      "payment_success_heading": "<span className=\"text-hr-ember\">YOU HAVE SUCCESSFULLY REGISTERED</span> <br/> FOR THE EVENT <span className=\"text-hr-honey\">HAPPY RUN 2025</span>",
+      "payment_success_qr_guide": "Please make the payment using the QR code below",
+      "payment_success_desc_1": "A successful registration email will be sent to your email address.",
+      "payment_success_desc_2": "Thank you very much and see you at the Happy Run 2025 event!",
+      "payment_success_note": "If you do not receive the confirmation email or need support with your order, please contact the organizers: <b>happyrun2025@wellspringsaigon.edu.vn</b>",
+      "policy_heading": "<span className=\"text-hr-ember\">CONFIRMATION OF UNDERSTANDING</span> <br/> AND <span className=\"text-brand-persian\">DISCLAIMER</span> <br/> WHEN PARTICIPATING IN <span className=\"text-hr-honey\">HAPPY RUN 2025</span>"
     },
     "buttons": {
-      "add_person": "Thêm người +",
-      "register_now": "Đăng ký ngay"
-    }
+      "add_person": "Add Person +",
+      "register_now": "Register Now",
+      "confirm_payment": "Confirm Payment",
+      "go_back": "Go Back",
+      "download_qr": "Download QR Code",
+      "finish": "Finish",
+      "agree": "I Agree and Continue",
+      "not_agree": "I Do Not Agree"
+    },
+    "ticket_sale_official_time": "Official Ticket Sale Time",
+    "count_down_heading": "Welcome WISERS to Happy Run 2025 & <br/> Kick off Happy Summer 2025",
+    "count_down_date": "Only <span className=\"text-[40rem] font-semibold\">{{day}}</span> days <span className=\"text-[40rem] font-semibold\">{{minutes}}</span> minutes <span className=\"text-[40rem] font-semibold\">{{seconds}}</span> seconds left",
+    "teaser_heading_1": "Happy",
+    "teaser_heading_2": "Run",
+    "target_heading": "Target",
+    "route_heading": "Route",
+    "detailed_route_heading": "Detailed Route",
+    "timing_route_heading": "Timing",
+    "highlight_route_heading": "Highlights",
+    "ticket_heading": "Ticket Class",
+    "ticket_description": "Click on each Ticket Class to see details",
+    "kit_heading": "Runner Kit",
+    "kit_description": "Option to customize BIB content <span className=\"text-hr-ember\">for Well-being ticket class</span>",
+    "kit_meta": "(Content includes up to 8 characters: letters and numbers of your choice)"
   },
   "nutritional_journey": {
     "title": "Hành Trình Dinh Dưỡng",
